Fri Feb 25 10:11:50 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html (maximum_pages): Describe new bahaviour (as of
	3.1.4), where this limits total matches shown.

Thu Feb 24 20:24:24 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/FAQ.html: Update to refer to 3.1.5 and edit comments about 3.2.

Thu Feb 24 15:20:08 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/RELEASE.html, htdoc/main.html: Updated notes for 3.1.5 release.

Thu Feb 24 10:37:45 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html (external_parsers): Add references to FAQ 4.8 & 4.9.
	(local_default_doc): Give an expanded example.
	(logging): Explain log entry format.
	(star_blank): Fix some old typos (incorrect references to other attrs.)

Wed Feb 23 13:58:24 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/cgi.cc(init): Fixed bug: array must be free by
	delete [] buf, not just delete buf; (from Vadim).
	* installdir/syntax.html: Fixed a $(WORDS) I'd missed earlier.

Tue Feb 22 12:40:22 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/RELEASE.html, htdoc/main.html: Updated notes for 3.1.5 release.
	* htlib/URL.cc (URL, normalizePath): Fix PR#779, to handle relative
	URLs correctly when there's a trailing ".." or leading "//".

Thu Feb 17 15:58:53 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/RELEASE.html, htdoc/main.html: Add notes for 3.1.5 release.
	* htdoc/TODO.html, htdoc/author.html, htdoc/bugs.html,
	htdoc/cf_general.html, htdoc/cf_types.html, htdoc/cf_variables.html,
	htdoc/config.html, htdoc/howitworks.html, htdoc/htdig.html,
	htdoc/htfuzzy.html, htdoc/htmerge.html, htdoc/htnotify.html,
	htdoc/hts_form.html, htdoc/hts_general.html, htdoc/hts_method.html,
	htdoc/install.html, htdoc/isp.html, htdoc/mailing.html,
	htdoc/meta.html, htdoc/notification.html, htdoc/require.html,
	htdoc/uses.html, htdoc/where.html: Update copyright date and fix